사용자 설정 추가 / 로컬 로그인 JWT